--- a/index.html
+++ b/index.html
@@ -144,7 +144,6 @@
               <div class="card-body">
                 <p class="card-text depoimento">
                   leandrofrotte: Obrigado pelo trabalho de excelência meu amigo!
-                  🔥
                 </p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
@@ -361,7 +360,7 @@
               />
               <div class="card-body">
                 <p class="card-text depoimento">
-                  beatrizlontra_: Amei Gabriel, arrasou!!🙌🙌🙌
+                  beatrizlontra_: Amei Gabriel, arrasou!!🙌🙌
                 </p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
